--- a/index.html
+++ b/index.html
@@ -1,52 +1,33 @@
 <!DOCTYPE html>
-<html lang="en-US" id="index">
+<html lang="en-US" class="ooze heat">
 <meta charset="utf-8">
-<title>music mural index</title>
-<meta name=viewport content="width=device-width, initial-scale=1">
+<title>reddy mural</title>
+<meta name=viewport content="width=device-width">
 <meta name=color-scheme content="dark light">
-<meta name=theme-color content="coral">
-<meta name=description content="webmural hypermusic">
-<link rel="stylesheet" href="dawn.css" media="(prefers-color-scheme:light)">
-<link rel="stylesheet" href="dusk.css" media="(prefers-color-scheme:dark)">
+<meta name=theme-color content="tomato">
+<meta name=description content="music or monkey on the moon">
+
+<link rel="stylesheet" href="reddy.css" media="all">
 <link rel="stylesheet" href="index.css">
+
 <link rel="license" href="UNLICENSE.txt">
 <link rel="icon" href="icon.svg">
 
 <main aria-label="setlist">
   <header>
-    <a href="#index">music mural index</a>
+    <a href="https://webmural.com/cosmicdust" class="ooze heat">reddy loves music</a>
   </header>
   <menu>
-    <li><a href="https://webmural.com/natural"><b>♮</b></a>
-    <li><a href="https://webmural.com/333">333</a>
-    <li><a href="https://webmural.com/bpm">BPM</a>
-    <li><a href="https://webmural.com/dfmu">DFMU</a>
-    <li><a href="https://webmural.com/edm">EDM</a>
-    <li><a href="https://webmural.com/hbfs">HBFS</a>
-    <li><a href="https://webmural.com/mpf">MPF</a>
-    <li><a href="https://webmural.com/nerd">NERD</a>
-    <li><a href="https://webmural.com/udm">UDM</a>
-    <li><a href="https://webmural.com/bat">ba+<sup>+<sup>+</sup></sup></a>
-    <li><a href="https://webmural.com/beabadoobee">bea<wbr>ba<wbr>doo<wbr>bee</a>
-    <li><a href="https://webmural.com/composure">compo<wbr>sure</a>
-    <li><a href="https://webmural.com/contrast">contrast</a>
-    <li><a href="https://webmural.com/dance">dance</a>
-    <li><a href="https://webmural.com/creatoreditable"><mark>creator</mark>editable</a>
-    <li><a href="https://webmural.com/jimi">jimi</a>
-    <li><a href="https://webmural.com/feenyx">feenyx</a>
-    <li><a href="https://webmural.com/lavender">lavender</a>
-    <li><a href="https://webmural.com/honeyspider"><mark>honey</mark>spider</a>
-    <li><a href="https://webmural.com/maybee">maybee</a>
-    <li><a href="https://webmural.com/moshpit">moshpit</a>
-    <li><a href="https://webmural.com/mussel">mussel</a>
-    <li><a href="https://webmural.com/risilient/#i">r¡silient</a>
-    <li><a href="https://webmural.com/violin">violin</a>
-    <li><a href="https://webmural.com/shame">shame</a>
-    <li><a href="https://webmural.com/trance">trance</a>
-    <li><a href="https://webmural.com/turf">TURF<sub>ing</sub></a>
+    <li><a href="https://webmural.com/music" class="ooze jupe">music loves reddy</a>
+    <li><a href="https://webmural.com/deserve" class="ooze volt">mutt skiba was here</a>
+    <li><a href="https://webmural.com/beabadoobee" class="ooze moss">new hair new face</a>
+    <li><a href="https://webmural.com/dialon" class="ooze rain">lost my twin</a>
+    <li><a href="https://webmural.com/toucan" class="ooze lawn">chlorophyll lips</a>
+    <li><a href="https://webmural.com/violetttear" class="ooze pulp">purple hat</a>
+    <li><a href="https://webmural.com/puvm" class="ooze heat">always <b>reddy</b></a>
   </menu>
   <footer>
-    <a rel="home" href="https://webmural.com">home</a>
-    <a rel="help" href="https://webmural.dev/music">code</a>
+    <a rel="home" href="https://webmural.com/web123">web123</a>
+    <a rel="help" href="https://webmural.com/333">3:33</a>
   </footer>
 </main>
